--- a/project/c4-final-project-starter-code/backend/serverless.yml
+++ b/project/c4-final-project-starter-code/backend/serverless.yml
@@ -8,7 +8,7 @@ plugins:
   - serverless-iam-roles-per-function
   - serverless-plugin-tracing
   - serverless-reqvalidator-plugin
-  - serverless-aws-documentation
+  # - serverless-aws-documentation
 
 provider:
   name: aws
@@ -45,20 +45,20 @@ provider:
             - xray:PutTelemetryRecords
             - xray:PutTraceSegments
           Resource: "*"
-custom:
-  documentation:
-    api:
-      info:
-        version: '1.0.0'
-        title: define-serverless-api-p4
-        description: define-serverless-api-p4
-    models:
-      - name: CreateTodoRequest
-        contentType: "application/json"
-        schema: ${file(models/create-todo-model.json)}
-      - name: UpdateTodoRequest
-        contentType: "application/json"
-        schema: ${file(models/update-todo-model.json)}
+# custom:
+#   documentation:
+#     api:
+#       info:
+#         version: '1.0.0'
+#         title: define-serverless-api-p4
+#         description: define-serverless-api-p4
+#     models:
+#       - name: CreateTodoRequest
+#         contentType: "application/json"
+#         schema: ${file(models/create-todo-model.json)}
+#       - name: UpdateTodoRequest
+#         contentType: "application/json"
+#         schema: ${file(models/update-todo-model.json)}
 
 functions:
 
@@ -80,6 +80,7 @@ functions:
       - Effect: Allow
         Action:
           - dynamodb:Query
+          - dynamodb:GetItem
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
       - Effect: Allow
         Action:
@@ -105,15 +106,14 @@ functions:
           cors: true
           authorizer: Auth
           reqValidatorName: RequestBodyValidator
-          documentation:
-            summary: Create a new todo
-            description: Create a new todo
-            requestModels:
-              'application/json': CreateTodoRequest
+          request:
+            schemas:
+              application/json: ${file(models/create-todo-model.json)}
     iamRoleStatements:
       - Effect: Allow
         Action:
           - dynamodb:PutItem
+          - dynamodb:UpdateItem
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
       - Effect: Allow
         Action:
@@ -132,16 +132,14 @@ functions:
           path: todos/{todoId}
           cors: true
           authorizer: Auth
-          reqValidatorName: RequestBodyValidator
-          documentation:
-            summary: Update todo
-            description: Update todo
-            requestModels:
-              'application/json': UpdateTodoRequest
+          request:
+            schemas:
+              application/json: ${file(models/update-todo-model.json)}
     iamRoleStatements:
       - Effect: Allow
         Action:
           - dynamodb:UpdateItem
+          - dynamodb:PutItem
           - dynamodb:GetItem
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
       - Effect: Allow
@@ -165,7 +163,8 @@ functions:
       - Effect: Allow
         Action:
           - dynamodb:DeleteItem
-          - dynamodb:GetItem
+          - dynamodb:PutItem
+          - dynamodb:UpdateItem
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
       - Effect: Allow
         Action:
