--- a/project/c4-final-project-starter-code/backend/package.json
+++ b/project/c4-final-project-starter-code/backend/package.json
@@ -7,6 +7,7 @@
         "@types/http-errors": "^1.8.2",
         "aws-xray-sdk": "^3.3.6",
         "axios": "^0.27.2",
+        "debug": "^4.3.4",
         "http-errors": "^2.0.0",
         "jsonwebtoken": "^8.5.1",
         "middy": "^0.24.0",
